# gjallarbot

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml  release.yml
src/: bot.rs  commands.rs  config.rs  controllers.rs  data.rs  embeds.rs  errors.rs  main.rs  services.rs  views.rs  wake_on_lan.rs
src/commands/: register.rs  servitor.rs  wake_on_lan.rs
src/commands/servitor/: action.rs  authorization.rs  server.rs
src/commands/wake_on_lan/: authorization.rs  machine.rs  wake.rs
src/controllers/: servitor.rs  wake_on_lan.rs
src/controllers/servitor/: action.rs  authorization.rs  server.rs
src/controllers/wake_on_lan/: authorization.rs  machine.rs  wake.rs
src/data/: authorization.rs  persistent_data.rs  servitor.rs  wake_on_lan.rs
src/services/: servitor.rs  wake_on_lan.rs
src/views/: servitor.rs  wake_on_lan.rs
src/views/servitor/: action.rs  authorization.rs  server.rs
src/views/wake_on_lan/: authorization.rs  machine.rs  wake.rs
