[package]
name = "gjallarbot"
description = "My personal 'stuff' Discord bot"
keywords = ["discord", "bot"]
repository = "https://github.com/Angelin01/gjallarbot"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.*"
env_logger = "0.11.*"
log = "0.4.*"
poise = "0.6.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
thiserror = "1.0.*"
tokio = { version = "1.41.*", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = "debuginfo"
lto = "fat"

[dev-dependencies]
tempfile = "3.13.*"
