[package]
name = "gjallarbot"
description = "My personal 'stuff' Discord bot"
keywords = ["discord", "bot"]
repository = "https://github.com/Angelin01/gjallarbot"
license = "MIT"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.*"
env_logger = "0.11.*"
figment = { version = "0.10.19", default-features = false, features = ["env", "toml"] }
log = "0.4.*"
poise = { version = "0.6.*", default-features = false, features = ["chrono"] }
serenity = { version = "0.12.*", default-features = false, features = ["chrono", "rustls_backend", "simd-json", "parking_lot"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
thiserror = "1.0.*"
tokio = { version = "1.41.*", features = ["macros", "parking_lot", "rt-multi-thread", "signal"] }

[profile.release]
strip = "debuginfo"
lto = "fat"

[dev-dependencies]
tempfile = "3.13.*"
