[package]
name = "gjallarbot"
description = "My personal 'stuff' Discord bot"
keywords = ["discord", "bot"]
repository = "https://github.com/Angelin01/gjallarbot"
license = "MIT"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.*"
figment = { version = "0.10.19", default-features = false, features = ["env", "toml"] }
log = "0.4.*"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
poise = { version = "0.6.*", default-features = false, features = ["chrono"] }
serenity = { version = "0.12.*", default-features = false, features = ["chrono", "rustls_backend", "simd-json", "parking_lot"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*" }
tracing-subscriber = { version = "0.3.18", features = ["parking_lot", "env-filter"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "parking_lot", "rt-multi-thread", "signal"] }
chrono = "0.4.40"

[profile.release]
strip = "debuginfo"
lto = "fat"

[dev-dependencies]
tempfile = "3.17.1"
rstest = "0.25.0"
